# ghaudit

./: .gitignore  Cargo.toml  LLM Vulnerability Detection Research.md  OSV Vulnerability Database Research.md  Optimizing Rust Concurrency Model.md  Optimizing Secret Detection Entropy Thresholds.md  RESEARCH_TOPICS.md  Rust App for GitHub Security Analysis.txt  SAST Query Optimization and Comparison.md  SECURITY_AUDIT.md  SLSA Provenance Verification Research.md  codebase_dump.txt  crosslanguage_vulnerability.md  dump_codebase.ps1  dump_codebase.py  dump_codebase.sh  privacy_preservation.md
src/: cache.rs  concurrency.rs  config.rs  error.rs  lib.rs  main.rs
src/ai/: mod.rs
src/analyzer/: benchmark.rs  mod.rs  name_resolution.rs  queries.rs  sast.rs  sca.rs  secrets.rs  taint.rs
src/crawler/: git.rs  github.rs  mod.rs
src/crosslang/: apir.rs  lang_mapping.rs  mod.rs
src/models/: finding.rs  mod.rs  repository.rs  vulnerability.rs
src/privacy/: anonymizer.rs  local_llm.rs  mod.rs
src/provenance/: mod.rs  slsa.rs
src/reporter/: mod.rs  sarif.rs  text.rs
