[package]
name = "sec_auditor"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust security analysis engine for GitHub repositories"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
rayon = "1.10"
futures = "0.3"

# GitHub API
octocrab = "0.41"

# Git operations
git2 = "0.19"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Tree-sitter for SAST
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# OSV vulnerability database
osv = "0.2"

# Sigstore verification
sigstore-verification = { version = "0.2", default-features = false, features = ["rustls"] }

# Persistent cache for Rekor tiles
redb = "2.4"

# File system traversal
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"

# Cargo.lock parsing
cargo-lock = "10.0"

# SARIF output
serde-sarif = "0.6"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# URL handling
url = "2.5"
urlencoding = "2.1"

# Regex for pattern matching
regex = "1.11"

# Temp directories for cloning
tempfile = "3.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Semantic versioning
semver = "1.0"

# Ecosystem-specific version parsers
node-semver = "2.2"
pep440_rs = "0.7"

# Base64 for encoding
base64 = "0.22"

# SHA hashing
sha2 = "0.10"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
